# docker-library

./: .gitignore  README.md
.github/: CODEOWNERS  update-image.sh
.github/actions/build-library-image/: action.yml
.github/actions/publish-release/: README.md  action.yml  release.sh
.github/workflows/: build-cent7.yaml  multi-arch-test.yaml  poetry-update.yml  release-poetry-image.yml  release-uw-saml-poetry-image.yml  tag-latest.yml  update-base-python-images.yaml  validate-build-push.yml
images/: poetry.dockerfile  uw-saml-poetry.dockerfile
images/centos7/: Dockerfile  README.md
images/poetry/: Dockerfile  bootstrap-poetry-env.sh
images/python-base/: Dockerfile  README.md
images/uw-saml-poetry/: Dockerfile  bootstrap-xmlsec-env.sh  pyproject.toml
