[tool.poetry]
name = "uw-saml-poetry"
version = "0.1.0"
description = "A small shim to bootstrap uw-saml-python"
authors = ["Tom Thorogood <tom@tomthorogood.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
uw-saml = {extras = ["python3-saml"], version = "^1.0.19"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
